[gd_scene load_steps=4 format=2]

[ext_resource path="res://weapons/GunHandler.gd" type="Script" id=1]
[ext_resource path="res://assets/music/GUN_FIRE-GoodSoundForYou-820112263.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/music/Shotgun_Blast-Jim_Rogers-1914772763.wav" type="AudioStream" id=3]

[node name="GunHandler" type="Node2D"]
script = ExtResource( 1 )

[node name="Gun" type="Position2D" parent="."]
position = Vector2( 16, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 20, 0 )

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="PistolSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="HeavySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
